[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/dialogue_manager/views/settings_dialog.gd" type="Script" id=1]

[node name="SettingsDialog" type="WindowDialog"]
anchor_right = 0.5
anchor_bottom = 0.5
rect_min_size = Vector2( 600, 500 )
window_title = "Dialogue Editor Settings"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 590.0
margin_bottom = 490.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tabs" type="TabContainer" parent="Margin/VBox"]
margin_right = 580.0
margin_bottom = 450.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Editor" type="MarginContainer" parent="Margin/VBox/Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Margin/VBox/Tabs/Editor"]
margin_left = 4.0
margin_top = 4.0
margin_right = 568.0
margin_bottom = 410.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ErrorsTitle" type="Label" parent="Margin/VBox/Tabs/Editor/VBox"]
margin_right = 564.0
margin_bottom = 14.0
text = "Errors"

[node name="CheckForErrorsButton" type="CheckButton" parent="Margin/VBox/Tabs/Editor/VBox"]
margin_top = 18.0
margin_right = 564.0
margin_bottom = 58.0
text = "Check for errors while you type"

[node name="MissingTranslationsButton" type="CheckButton" parent="Margin/VBox/Tabs/Editor/VBox"]
margin_top = 62.0
margin_right = 564.0
margin_bottom = 102.0
text = "Treat missing static translation keys as errors"

[node name="Margin" type="MarginContainer" parent="Margin/VBox/Tabs/Editor/VBox"]
modulate = Color( 1, 1, 1, 0.470588 )
margin_top = 106.0
margin_right = 564.0
margin_bottom = 137.0
custom_constants/margin_right = 80
custom_constants/margin_left = 20

[node name="TranslationHelp" type="Label" parent="Margin/VBox/Tabs/Editor/VBox/Margin"]
margin_left = 20.0
margin_right = 484.0
margin_bottom = 31.0
text = "If you are using static translation keys then having this enabled will help you find any lines that you haven't added a key to yet."
autowrap = true

[node name="Spacer" type="Control" parent="Margin/VBox/Tabs/Editor/VBox"]
margin_top = 141.0
margin_right = 564.0
margin_bottom = 406.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Runtime" type="MarginContainer" parent="Margin/VBox/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Margin/VBox/Tabs/Runtime"]
margin_left = 4.0
margin_top = 4.0
margin_right = 568.0
margin_bottom = 410.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Message" type="Label" parent="Margin/VBox/Tabs/Runtime/VBox"]
margin_right = 564.0
margin_bottom = 14.0
text = "Choose which globals contain game state or methods that your dialogue needs."
autowrap = true

[node name="GlobalsList" type="Tree" parent="Margin/VBox/Tabs/Runtime/VBox"]
margin_top = 24.0
margin_right = 564.0
margin_bottom = 406.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3
hide_folding = true
hide_root = true
select_mode = 1

[node name="Input" type="MarginContainer" parent="Margin/VBox/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Margin/VBox/Tabs/Input"]
margin_left = 4.0
margin_top = 4.0
margin_right = 568.0
margin_bottom = 410.0
columns = 2

[node name="SkipTypingLabel" type="Label" parent="Margin/VBox/Tabs/Input/GridContainer"]
margin_top = 3.0
margin_right = 71.0
margin_bottom = 17.0
text = "Skip Typing"

[node name="SkipTypingOptionButton" type="OptionButton" parent="Margin/VBox/Tabs/Input/GridContainer"]
margin_left = 75.0
margin_right = 104.0
margin_bottom = 20.0

[node name="Actions" type="CenterContainer" parent="Margin/VBox"]
margin_top = 460.0
margin_right = 580.0
margin_bottom = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoneButton" type="Button" parent="Margin/VBox/Actions"]
margin_left = 267.0
margin_right = 313.0
margin_bottom = 20.0
text = "Done"

[connection signal="about_to_show" from="." to="." method="_on_SettingsDialog_about_to_show"]
[connection signal="toggled" from="Margin/VBox/Tabs/Editor/VBox/CheckForErrorsButton" to="." method="_on_CheckForErrorsButton_toggled"]
[connection signal="toggled" from="Margin/VBox/Tabs/Editor/VBox/MissingTranslationsButton" to="." method="_on_MissingTranslationsButton_toggled"]
[connection signal="button_pressed" from="Margin/VBox/Tabs/Runtime/VBox/GlobalsList" to="." method="_on_GlobalsList_button_pressed"]
[connection signal="item_selected" from="Margin/VBox/Tabs/Runtime/VBox/GlobalsList" to="." method="_on_GlobalsList_item_selected"]
[connection signal="item_selected" from="Margin/VBox/Tabs/Input/GridContainer/SkipTypingOptionButton" to="." method="_on_SkipTypingOptionButton_item_selected"]
[connection signal="pressed" from="Margin/VBox/Actions/DoneButton" to="." method="_on_DoneButton_pressed"]
